# pcp_rust

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: audio.rs  config.rs  device.rs  display.rs  icons.rs  led.rs  main.rs  obs.rs  osd.rs  paint.rs  prompt.rs  runtime.rs  service.rs  udev.rs
udev/: 70-pcpanel.rules  99-pcpanel.rules
