[package]
name = "pcp_rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hidapi = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
libpulse-binding = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Local override: uses a sibling checkout of pulse-binding-rust which fixes
# the ext_stream_restore write() transmute bug. Submitted upstream as PR #66.
# Requires cloning https://github.com/nwcromer/pulse-binding-rust (branch
# fix-ext-stream-restore-write) as a sibling directory to this repo.
# Remove this patch block once the PR merges and crates.io is updated.
[patch.crates-io]
libpulse-binding = { path = "../pulse-binding-rust/pulse-binding" }
libpulse-sys = { path = "../pulse-binding-rust/pulse-sys" }
