[package]
name = "pcp_rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hidapi = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
libpulse-binding = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Patches libpulse-binding and libpulse-sys to a fork that fixes the
# ext_stream_restore write() transmute bug. Submitted upstream as PR #66
# (https://github.com/jnqnfe/pulse-binding-rust/pull/66). When that PR
# merges and a fixed version is published to crates.io, remove this block.
[patch.crates-io]
libpulse-binding = { git = "https://github.com/nwcromer/pulse-binding-rust", branch = "fix-ext-stream-restore-write" }
libpulse-sys = { git = "https://github.com/nwcromer/pulse-binding-rust", branch = "fix-ext-stream-restore-write" }
